[tool.poetry]
name = "mbta-slow-zone-bot"
version = "0.2.3"
description = "A Twitter/Mastodon/Slack bot to track MBTA slow zones"
authors = ["TransitMatters Labs Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
tweepy = "^4.14.0"
"Mastodon.py" = "^1.8.1"
atproto = ">=0.0.55"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pip = ">=23.1"
flake8 = "^7.0.0"
black = "^24.2.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
