[tool.poetry]
name = "mbta-slow-zone-bot"
version = "0.2.4"
description = "A Twitter/Mastodon/Slack bot to track MBTA slow zones"
authors = ["TransitMatters Labs Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
tweepy = "^4.15.0"
"Mastodon.py" = "^1.8.1"
atproto = ">=0.0.57"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pip = ">=24.1"
flake8 = "^7.2.0"
black = "^25.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
